tests/ui/reborrow/coerce-shared-field-relations.stderr
error: implementing `CoerceShared` requires every target field to have a corresponding source field
  --> $DIR/coerce-shared-field-relations.rs:26:5
   |
LL |     target: &'a T,
   |     ^^^^^^^^^^^^^

error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-field-relations.rs:40:5
   |
LL |     value: &'a mut T,
   |     ---------------- source field `value` has type `&'a mut T`
...
LL |     value: &'a u32,
   |     ^^^^^^^^^^^^^^ target field `value` has type `&'a u32`

error: aborting due to 2 previous errors

